--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>VEXIUM</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="ui/style.css">
 </head>
 <body>
 
@@ -12,21 +12,14 @@
 
 <div id="ui">
 <h1 id="title">SIGN IN</h1>
-<div id="buttons">
-<button class="auth">SIGN IN WITH GOOGLE</button>
-<button class="auth">SIGN IN WITH MICROSOFT</button>
-<button class="auth">SIGN IN WITH APPLE</button>
-</div>
-<div id="foot">VEXIUM AUTHORIZATION TERMINAL</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/EffectComposer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/RenderPass.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/shaders/RGBShiftShader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/ShaderPass.js"></script>
+<script type="module" src="engine/main.js"></script>
 
-<script type="module" src="js/main.js"></script>
 </body>
 </html>
